crates/pixi_build_rust/src/snapshots/pixi_build_rust__tests__env_vars_are_set.snap
---
source: crates/pixi_build_rust/src/main.rs
expression: generated_recipe.recipe.build.script
---
env:
  foo: bar
content: "[ ... script ... ]"
